# conway-gol

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cgol/: CMakeLists.txt
cgol/app/: main.cpp
cgol/gollib/: grid.cpp
cgol/include/: grid.hpp  simulation.hpp
cgol/src/: grid.cpp  main.cpp  simulation.cpp
